<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tmms_master</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="piuslim373@gmail.com">piuslim373</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>z1_robot_controller</exec_depend>
  <exec_depend>spacenav</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>quadruped_controller</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
